--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog name</title>
+    <title>Not Found | Spaceship</title>
     <meta property="og:image" content="#"/>
     <meta property="og:site_name" content="Spaceship"/>
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon.png">
@@ -32,7 +32,7 @@
                                 <span class="txt txt-16 header-link-div">/</span>
                             </li>
                             <li class="header-link-item">
-                                <a href="./about.html" class="txt txt-16 txt-med header-link-txt" data-link="about">About
+                                <a href="./" class="txt txt-16 txt-med header-link-txt" data-link="about">About
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
@@ -89,15 +89,6 @@
                 </div>
             </div>
         </header>
-        <div class="cursor">
-            <div class="cursor-wrap">
-                <div class="cursor-inner">
-                    <div class="txt txt-16 cursor-txt">
-                        Drag
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="popup">
             <div class="popup-overlay" data-popup="close"></div>
             <div class="popup-main">
@@ -201,73 +192,35 @@
                 </a>
             </div>
         </div>
-        <div class="main" data-barba="container" data-barba-namespace="blogdtl" data-namespace="blogdtl">
-            <section class="blogdtl-hero">
-                <div class="container grid">
-                    <div class="blogdtl-hero-title-wrap">
-                        <div class="blogdtl-hero-btn-wrap">
-                            <a href="./insight.html" class="btn btn-outline btn-sm">
-                                <div class="icon icon-16 icon-btn">
-                                    <svg width="100%" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M13.5 8.5H3.5M3.5 8.5L8 13M3.5 8.5L8 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                                </div>
-                                <div class="txt txt-14 txt-med txt-btn">Back to Insights</div>
-                            </a>
-                        </div>
-                        <h1 class="heading h1 blogdtl-hero-title">
-                            Loading....
-                        </h1>
-                    </div>
-                    <div class="blogdtl-hero-thumb">
-                        <img src="./imgs/blogdtl-thumb.jpg" alt="Blog name">
+        <div class="cursor">
+            <div class="cursor-wrap">
+                <div class="cursor-inner">
+                    <div class="txt txt-16 cursor-txt">
+                        Drag
                     </div>
                 </div>
-            </section>
-            <section class="blogdtl-main">
+            </div>
+        </div>
+        <div class="main" data-barba="container" data-barba-namespace="notfound" data-namespace="notfound">
+            <section class="notfound-main">
                 <div class="container grid">
-                    <div class="txt txt-18 blogdtl-main-rictxt">
-                        <p class="txt txt-18">
-                            Loading...
+                    <div class="notfound-main-inner">
+                        <div class="heading notfound-main-title">
+                            404
+                        </div>
+                        <p class="txt txt-36 txt-med notfound-main-label">
+                            Opps! Page does not exist
                         </p>
-                    </div>
-                </div>
-            </section>
-            <section class="blogdtl-rel">
-                <div class="container grid">
-                    <div class="blogdtl-rel-title-wrap">
-                        <h2 class="heading h4 blogdtl-rel-title">
-                            Latest articles
-                        </h2>
-                        <span class="decor-slash"></span>
-                    </div>
-                    <div class="swiper blogdtl-rel-main">
-                        <div class="swiper-wrapper blogdtl-rel-list">
-                            <a href="#" class="swiper-slide blogdtl-rel-item">
-                                <div class="label-wrap blogdtl-rel-item-label">
-                                    <div class="txt txt-16 txt-med">March, 2022</div>
+                        <p class="heading h6 txt-reg notfound-main-sub">
+                            Maybe you got a broken link, or maybe you made a misprint in the address bar.
+                        </p>
+                        <div class="notfound-main-btn-wrap">
+                            <a href="./" class="btn">
+                                <div class="txt txt-16 txt-med txt-btn">
+                                    Return to homepage
                                 </div>
-                                <h3 class="heading h6 blogdtl-rel-item-title">
-                                    Loading...
-                                </h3>
                             </a>
                         </div>
-                    </div>
-                    <div class="swiper-pagi blogdtl-rel-pagi">
-                        <a href="#" class="btn-ic swiper-pagi-prev">
-                            <div class="icon icon-16">
-                                <svg width="100%" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M13 8H3M3 8L7.5 12.5M3 8L7.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                            </div>
-                        </a>
-                        <a href="#" class="btn-ic swiper-pagi-next">
-                            <div class="icon icon-16">
-                                <svg width="100%" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M3 8H13M13 8L8.5 3.5M13 8L8.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                            </div>
-                        </a>
                     </div>
                 </div>
             </section>
@@ -393,7 +346,7 @@
                                 </a>
                             </li>
                             <li class="ft-menu-link">
-                                <a href="./about.html" class="heading h5 ft-menu-link-txt" data-link="about">
+                                <a href="#" class="heading h5 ft-menu-link-txt" data-link="about">
                                     About
                                     <div class="line">
                                         <div class="line-inner"></div>
