--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="header-act">
                         <div class="header-btn-wrap">
-                            <a href="#" class="btn">
+                            <a href="#" class="btn" data-popup="open">
                                 <div class="txt txt-16 txt-btn txt-med">Get in touch</div>
                             </a>
                         </div>
@@ -222,134 +222,56 @@
                 </div>
             </section>
             <section class="home-part">
-                <div class="home-part-label-wrap">
-                    <span class="line"></span>
-                    <p class="txt txt-med txt-16 home-part-label">
-                        Partners & Grants
-                    </p>
-                    <span class="line"></span>
-                </div>
-                <div class="home-part-marquee">
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                <div class="container">
+                    <div class="home-part-label-wrap">
+                        <span class="line"></span>
+                        <p class="txt txt-med txt-16 home-part-label">
+                            Partners & Grants
+                        </p>
+                        <span class="line"></span>
+                    </div>
+                    <div class="home-part-marquee">
+                        <div class="home-part-marquee-inner">
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                            </div>
                         </div>
                     </div>
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                        </div>
-                    </div>
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                        </div>
-                    </div>
-                </div>
-                <div class="home-part-marquee hidden-dk">
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                        </div>
-                    </div>
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                        </div>
-                    </div>
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                    <div class="home-part-marquee hidden-dk">
+                        <div class="home-part-marquee-inner">
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -942,7 +864,7 @@
                         </div>
                         <div class="ft-abt-form-wrap">
                             <div class="ft-abt-info-btn-wrap hidden-dk">
-                                <a href="#" class="btn btn-outline">
+                                <a href="#" class="btn btn-outline" data-popup="open">
                                     <div class="txt txt-16 txt-med">Get in touch</div>
                                 </a>
                             </div>
