--- a/index.html
+++ b/index.html
@@ -333,134 +333,56 @@
                 </div>
             </section>
             <section class="home-part">
-                <div class="home-part-label-wrap">
-                    <span class="line"></span>
-                    <p class="txt txt-med txt-16 home-part-label">
-                        Partners & Grants
-                    </p>
-                    <span class="line"></span>
-                </div>
-                <div class="home-part-marquee">
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                <div class="container">
+                    <div class="home-part-label-wrap">
+                        <span class="line"></span>
+                        <p class="txt txt-med txt-16 home-part-label">
+                            Partners & Grants
+                        </p>
+                        <span class="line"></span>
+                    </div>
+                    <div class="home-part-marquee">
+                        <div class="home-part-marquee-inner">
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                            </div>
                         </div>
                     </div>
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                        </div>
-                    </div>
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                        </div>
-                    </div>
-                </div>
-                <div class="home-part-marquee hidden-dk">
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                        </div>
-                    </div>
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                        </div>
-                    </div>
-                    <div class="home-part-marquee-inner">
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                        </div>
-                        <div class="home-part-marquee-item">
-                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                    <div class="home-part-marquee hidden-dk">
+                        <div class="home-part-marquee-inner">
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                            </div>
+                            <div class="home-part-marquee-item">
+                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -828,7 +750,7 @@
                             </p>
                             <div class="ft-abt-info-btn-wrap hidden-tb">
                                 <a href="#" class="btn btn-outline">
-                                    <div class="txt txt-16 txt-med">Get in touch</div>
+                                    <div class="txt txt-16 txt-med" data-popup="open">Get in touch</div>
                                 </a>
                             </div>
                         </div>
@@ -979,6 +901,7 @@
                 </video>
             </div>
         </footer>
+        <a href="./404.html" class="link-hidden"></a>
     </div>
     <script src="./js/index.js" type="module"></script>
 </body>
