--- a/term.html
+++ b/term.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="header-act">
                         <div class="header-btn-wrap">
-                            <a href="#" class="btn">
+                            <a href="#" class="btn" data-popup="open">
                                 <div class="txt txt-16 txt-btn txt-med">Get in touch</div>
                             </a>
                         </div>
@@ -343,7 +343,7 @@
                         </div>
                         <div class="ft-abt-form-wrap">
                             <div class="ft-abt-info-btn-wrap hidden-dk">
-                                <a href="#" class="btn btn-outline">
+                                <a href="#" class="btn btn-outline" data-popup="open">
                                     <div class="txt txt-16 txt-med">Get in touch</div>
                                 </a>
                             </div>
