--- a/insight.html
+++ b/insight.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="header-act">
                         <div class="header-btn-wrap">
-                            <a href="#" class="btn">
+                            <a href="#" class="btn" data-popup="open">
                                 <div class="txt txt-16 txt-btn txt-med">Get in touch</div>
                             </a>
                         </div>
@@ -217,28 +217,17 @@
                     <div class="ins-news-logo">
                         <div class="ins-news-logo-inner">
                             <div class="ins-news-logo-item item-default">
-                                <div class="ins-news-logo-item-img">
-                                    <img src="./imgs/news-spaceship.svg" alt="Sce logo">
+                                <div class="ins-news-logo-item-inner" style="--press_color: #292929">
+                                    <div class="ins-news-logo-item-img">
+                                        <img src="./imgs/news-spaceship.svg" alt="Sce logo">
+                                    </div>
                                 </div>
                             </div>
                             <div class="ins-news-logo-item">
-                                <div class="ins-news-logo-item-img">
-                                    <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                </div>
-                            </div>
-                            <div class="ins-news-logo-item">
-                                <div class="ins-news-logo-item-img">
-                                    <img src="./imgs/news-fed.svg" alt="Sce logo">
-                                </div>
-                            </div>
-                            <div class="ins-news-logo-item">
-                                <div class="ins-news-logo-item-img">
-                                    <img src="./imgs/news-unit.svg" alt="Sce logo">
-                                </div>
-                            </div>
-                            <div class="ins-news-logo-item">
-                                <div class="ins-news-logo-item-img">
-                                    <img src="./imgs/news-venture-lab.svg" alt="Sce logo">
+                                <div class="ins-news-logo-item-inner" style="--press_color: #292929">
+                                    <div class="ins-news-logo-item-img">
+                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +258,7 @@
                         <div class="swiper ins-news-main-inner">
                             <div class="swiper-wrapper ins-news-main-list">
                                 <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
+                                    <div class="ins-news-main-item-logo" style="--press_color_mb: #292929">
                                         <img src="./imgs/logo-sce.svg" alt="Sce logo">
                                     </div>
                                     <div class="ins-news-main-item-content">
@@ -278,177 +267,6 @@
                                         </div>
                                         <h4 class="heading h6 ins-news-main-item-title">
                                             SPACE-SHIP Sets Sail into the Future of Maritime Technology
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            Innovation Unleashed: How SPACE-SHIP is Transforming Shipping
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            Navigating Waters of Change: The SPACE-SHIP Revolution
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            Navigating Waters of Change: The SPACE-SHIP Revolution
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            SPACE-SHIP Sets Sail into the Future of Maritime Technology
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            Innovation Unleashed: How SPACE-SHIP is Transforming Shipping
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            Navigating Waters of Change: The SPACE-SHIP Revolution
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            Navigating Waters of Change: The SPACE-SHIP Revolution
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            Navigating Waters of Change: The SPACE-SHIP Revolution
-                                        </h4>
-                                        <p class="txt txt-18 ins-news-main-item-name">
-                                            MaritimeInsider
-                                        </p>
-                                    </div>
-                                    <div class="line">
-                                        <div class="line-inner"></div>
-                                    </div>
-                                </a>
-                                <a href="#" target="_blank" class="swiper-slide ins-news-main-item">
-                                    <div class="ins-news-main-item-logo">
-                                        <img src="./imgs/logo-sce.svg" alt="Sce logo">
-                                    </div>
-                                    <div class="ins-news-main-item-content">
-                                        <div class="txt txt-18 txt-med ins-news-main-item-year">
-                                            2023
-                                        </div>
-                                        <h4 class="heading h6 ins-news-main-item-title">
-                                            Navigating Waters of Change: The SPACE-SHIP Revolution
                                         </h4>
                                         <p class="txt txt-18 ins-news-main-item-name">
                                             MaritimeInsider
@@ -473,30 +291,24 @@
                     </div>
                     <div class="ins-art-main">
                         <div class="ins-art-main-inner">
-                            <a href="#" class="ins-art-main-item hover-arr">
+                            <a href="./blog-dtl.html" class="ins-art-main-item">
                                 <div class="ins-art-main-item-thumb">
                                     <img src="./imgs/ins-art-thumb.jpg" alt="Port">
                                 </div>
                                 <div class="ins-art-main-item-content">
-                                    <div class="label-wrap ins-art-main-item-label">
-                                        <div class="txt txt-16 txt-med">March, 2023</div>
-                                    </div>
                                     <h3 class="heading h4 ins-art-main-item-title">
                                         Revolutionizing Maritime Technology: A Look into the Future
                                     </h3>
-                                </div>
-                                <div class="icon icon-28 arr-wrap">
-                                    <div class="ic-arr-main">
-                                        <svg width="100%" height="100%" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.6351 3.22139L2.62502 27.2315L0.76886 25.3753L24.779 1.36523L26.6351 3.22139Z" fill="currentColor"/>
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M3.9375 1.3125H26.6875V24.0625H24.0625V3.9375H3.9375V1.3125Z" fill="currentColor"/>
-                                        </svg>
-                                    </div>
-                                    <div class="ic-arr-clone">
-                                        <svg width="100%" height="100%" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.6351 3.22139L2.62502 27.2315L0.76886 25.3753L24.779 1.36523L26.6351 3.22139Z" fill="currentColor"/>
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M3.9375 1.3125H26.6875V24.0625H24.0625V3.9375H3.9375V1.3125Z" fill="currentColor"/>
-                                        </svg>
+                                    <div class="ins-art-main-item-info">
+                                        <div class="label-wrap ins-art-main-item-label">
+                                            <div class="txt txt-16 txt-med">March, 2023</div>
+                                        </div>
+                                        <div class="txt txt-16 ins-art-main-item-link">
+                                            View detail
+                                            <div class="line">
+                                                <div class="line-inner"></div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="line">
@@ -598,7 +410,7 @@
                                 We are prepared and committed to discovering tailored March, 2022 for your needs.
                             </p>
                             <div class="ft-abt-info-btn-wrap hidden-tb">
-                                <a href="#" class="btn btn-outline">
+                                <a href="#" class="btn btn-outline" data-popup="open">
                                     <div class="txt txt-16 txt-med">Get in touch</div>
                                 </a>
                             </div>
